k8s/axon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axon-api
  labels:
    app: axon-api
spec:
  type: ClusterIP
  selector:
    app: axon-api
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
